refactor: integrate foxact

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "es-toolkit": "^1.42.0",
+    "foxact": "^0.2.49",
     "marked": "^17.0.1",
     "metascraper": "^5.49.7",
     "metascraper-description": "^5.49.7",
