feat: integrate Mermaid support for enhanced diagram rendering and interaction

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "astro": "^5.16.4",
     "astro-icon": "^1.1.5",
     "astro-loading-indicator": "^0.7.1",
+    "astro-mermaid": "^1.2.0",
     "astro-pagefind": "^1.8.5",
     "astro-tooltips": "^0.6.2",
     "class-variance-authority": "^0.7.1",
@@ -50,6 +51,7 @@
     "es-toolkit": "^1.42.0",
     "foxact": "^0.2.49",
     "marked": "^17.0.1",
+    "mermaid": "^11.12.2",
     "metascraper": "^5.49.7",
     "metascraper-description": "^5.49.7",
     "metascraper-image": "^5.49.7",
