--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "astro-tooltips": "^0.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dayjs": "^1.11.19",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "es-toolkit": "^1.42.0",
     "foxact": "^0.2.49",
     "marked": "^17.0.1",
