--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "sanitize-html": "^2.17.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.1.17",
     "tailwindcss-animate": "^1.0.7",
@@ -109,7 +110,8 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,astro}": [
-      "biome check --write --no-errors-on-unmatched"
+      "biome check --write --no-errors-on-unmatched",
+      "astro check"
     ],
     "*.{md,mdx}": [
       "lint-md --fix"
