--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "knip": "^5.71.0",
     "lint-staged": "^15.5.2",
     "remark": "^15.0.1",
+    "rollup-plugin-visualizer": "^6.0.5",
     "sharp": "^0.34.5",
     "strip-markdown": "^6.0.0",
     "tsx": "^4.21.0",
