--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "knip": "knip"
   },
   "dependencies": {
-    "@antv/infographic": "^0.2.3",
+    "@antv/infographic": "^0.2.4",
     "@astrojs/check": "^0.9.6",
     "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.14",
@@ -86,6 +86,7 @@
     "@huggingface/transformers": "^3.8.1",
     "@iconify/react": "^5.2.1",
     "@lint-md/cli": "^2.0.0",
+    "@rollup/plugin-yaml": "^4.1.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.19",
     "@types/hast": "^3.0.4",
@@ -109,6 +110,7 @@
     "strip-markdown": "^6.0.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
+    "vite": "^7.3.1",
     "vite-plugin-svgr": "^4.5.0"
   },
   "lint-staged": {
