--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lint-staged": "lint-staged",
     "change": "git cliff --bump -o CHANGELOG.md",
     "prepare": "husky",
-    "knip": "knip"
+    "knip": "knip",
+    "koharu": "npx tsx scripts/koharu.tsx"
   },
   "dependencies": {
     "@antv/infographic": "^0.2.4",
@@ -85,6 +86,7 @@
     "@biomejs/biome": "^2.3.10",
     "@huggingface/transformers": "^3.8.1",
     "@iconify/react": "^5.2.1",
+    "@inkjs/ui": "^2.0.0",
     "@lint-md/cli": "^2.0.0",
     "@rollup/plugin-yaml": "^4.1.2",
     "@tailwindcss/container-queries": "^0.1.1",
@@ -101,6 +103,7 @@
     "glob": "^13.0.0",
     "gray-matter": "^4.0.3",
     "husky": "^9.1.7",
+    "ink": "^6.6.0",
     "js-yaml": "^4.1.1",
     "knip": "^5.71.0",
     "lint-staged": "^15.5.2",
