refactor: migrate comment and analytics configurations to site.yaml and update docs

--- a/.env.example
+++ b/.env.example
@@ -6,16 +6,10 @@
 # =============================================================================
 
 # -----------------------------------------------------------------------------
-# Comment System (Remark42)
+# NOTE: Comment System (Remark42) and Analytics (Umami) configurations
+# have been moved to config/site.yaml for easier management.
+# See the `comment` and `analytics` sections in site.yaml.
 # -----------------------------------------------------------------------------
-REMARK_URL=https://comment.example.com/
-REMARK_SITE_ID=your-site-id
-
-# -----------------------------------------------------------------------------
-# Analytics (Umami)
-# -----------------------------------------------------------------------------
-UMAMI_ID=your-umami-id
-UMAMI_ENDPOINT=https://stats.example.com
 
 # -----------------------------------------------------------------------------
 # Docker Configuration
