--- a/config/site.yaml
+++ b/config/site.yaml
@@ -344,6 +344,35 @@ navigation:
 #   mobileMaxLayers: 移动端最大层数
 #   mobileMaxIterations: 移动端最大迭代次数
 # -----------------------------------------------------------------------------
+# =============================================================================
+# Comment System (Remark42)
+# =============================================================================
+# host: Remark42 服务器地址
+# siteId: 站点 ID
+# enabled: 是否启用评论系统
+# -----------------------------------------------------------------------------
+comment:
+  remark42:
+    enabled: true
+    host: https://comment.example.com/
+    siteId: your-site-id
+
+# =============================================================================
+# Analytics (Umami)
+# =============================================================================
+# id: Umami 网站 ID
+# endpoint: Umami 服务器地址
+# enabled: 是否启用统计
+# -----------------------------------------------------------------------------
+analytics:
+  umami:
+    enabled: true
+    id: your-umami-id
+    endpoint: https://stats.example.com
+
+# =============================================================================
+# Christmas/Seasonal Features
+# =============================================================================
 christmas:
   enabled: false # 总开关
   # features: # 各功能独立开关
