--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astro-koharu",
   "type": "module",
-  "version": "2.3.5",
+  "version": "2.4.0",
   "scripts": {
     "dev": "astro dev",
     "generate:lqips": "npx tsx src/scripts/generateLqips.ts",
@@ -27,8 +27,15 @@
   },
   "dependencies": {
     "@antv/infographic": "^0.2.4",
+    "@astrojs/cloudflare": "^12.6.12",
+    "@astrojs/netlify": "^6.6.4",
+    "@astrojs/node": "^9.5.2",
     "@astrojs/react": "^4.4.2",
     "@astrojs/rss": "^4.0.14",
+    "@astrojs/vercel": "^9.0.4",
+    "@blocknote/core": "^0.46.1",
+    "@blocknote/react": "^0.46.1",
+    "@blocknote/shadcn": "^0.46.1",
     "@floating-ui/react": "^0.27.16",
     "@giscus/react": "^3.1.0",
     "@iconify-json/fa6-regular": "^1.2.4",
@@ -36,7 +43,9 @@
     "@iconify-json/gg": "^1.2.2",
     "@iconify-json/ri": "^1.2.6",
     "@nanostores/react": "^0.8.4",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
     "@react-three/fiber": "^9.4.2",
     "@tailwindcss/vite": "^4.1.17",
@@ -56,6 +65,7 @@
     "date-fns-tz": "^3.2.0",
     "es-toolkit": "^1.42.0",
     "foxact": "^0.2.49",
+    "js-yaml": "^4.1.1",
     "marked": "^17.0.1",
     "mermaid": "^11.12.2",
     "metascraper": "^5.49.7",
@@ -94,6 +104,7 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.19",
     "@types/hast": "^3.0.4",
+    "@types/js-yaml": "^4.0.9",
     "@types/mdast": "^4.0.4",
     "@types/node": "^24.10.1",
     "@types/sanitize-html": "^2.16.0",
