--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "astro-koharu",
   "type": "module",
   "version": "2.5.2",
+  "packageManager": "pnpm@10.25.0",
   "scripts": {
     "dev": "astro dev",
     "generate:lqips": "npx tsx src/scripts/generateLqips.ts",
