--- a/config/site.yaml
+++ b/config/site.yaml
@@ -46,6 +46,8 @@ categoryMap:
   密码: crypto
   杂项: misc
   前端: front-end
+  PWN: pwn
+  逆向: reverse
 
 
 # =============================================================================
