--- a/package.json
+++ b/package.json
@@ -129,7 +129,9 @@
     "knip": "^5.71.0",
     "lint-staged": "^15.5.2",
     "pinyin-pro": "^3.28.0",
+    "rehype-katex": "^7.0.1",
     "remark": "^15.0.1",
+    "remark-math": "^6.0.0",
     "sharp": "^0.34.5",
     "sonda": "^0.10.1",
     "strip-markdown": "^6.0.0",
