--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@waline/client": "^3.8.0",
     "@yeskunall/astro-umami": "0.0.4",
     "astro": "^5.16.6",
+    "astro-font": "^1.1.0",
     "astro-icon": "^1.1.5",
     "astro-loading-indicator": "^0.7.1",
     "astro-mermaid": "^1.2.0",
